--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,13 @@ version: 2
 jobs:
   build:
     working-directory: ~/circleci-test
-    docker: 
-      - image: circleci/python:2-stretch
+    #docker: 
+    #  - image: circleci/python:2-stretch
+    machine:
+      image: circleci/classic:201808-01
     steps:
       - run: sudo apt install jq
+      - run: python -m pip install junit2html && which junit2html
       - run: curl -s https://circleci.com/api/v1.1/project/github/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BUILD_NUM} | jq -r '.workflows.workflow_name'
 
 
