--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
       image: circleci/classic:201808-01
     steps:
       - run: sudo apt install jq
-      - run: python -m pip install junit2html && which junit2html
+      - run: python -m pip install junit2html
+      - run: junit2html
       - run: curl -s https://circleci.com/api/v1.1/project/github/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BUILD_NUM} | jq -r '.workflows.workflow_name'
 
 
