--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - run: sudo apt install jq
       - run: python -m pip install junit2html
-      - run: junit2html
+      - run: /opt/circleci/.pyenv/shims/junit2html
       - run: curl -s https://circleci.com/api/v1.1/project/github/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BUILD_NUM} | jq -r '.workflows.workflow_name'
 
 
