--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,10 @@ workflows:
   version: 2
   build_flow:
     jobs:
-      - build
+      - build:
+          filters:
+            tags:
+              only: /^v.*/
       - run:
           requires:
             - build
