Add branch control

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,9 @@ workflows:
     jobs:
       - build:
           filters:
+            branches:
+              only:
+                - test
             tags:
               only: /^v.*/
       - run:
